# ws-tradeprocessor

./: .gitignore  .gitmodules  CMakeLists.txt  finhubbws.cfg  finnhub.cfg  readme.md  rtdprocessor.cpp  vcpkg.json
lib/: CMakeLists.txt
lib/include/: Calc.hpp  Features.hpp  Scheduler.hpp  StreamProcessor.hpp  SymbolState.hpp  WSSession.hpp
lib/src/: FHAPI.cpp  WSSession.cpp
